# shazamctl

./: LICENSE  README.md  pyproject.toml  setup.cfg
shazamctl/: cli.py  microphone.py
