[tool.poetry]
name = "shazamctl"
version = "0.1.0"
description = "Open-source Shazam CLI"
authors = ["Alexander Pushkov <alexander@notpushk.in>"]
license = "ISC"
readme = "README.md"

[tool.poetry.scripts]
shazamctl = "shazamctl.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
shazamapi = {url = "https://github.com/notpushkin/ShazamAPI/archive/refs/heads/refactor.zip"}
PyAudio = { version = "^0.2.11", optional = true }

[tool.poetry.extras]
listen = ["PyAudio"]

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
mypy = "0.941"
pydub-stubs = "^0.25.1"
wemake-python-styleguide = "^0.16.1"
add-trailing-comma = "^2.2.2"
isort = "^5.10.1"
rope = "^0.23.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
